--- a/gradle-typescript-plugin/build.gradle
+++ b/gradle-typescript-plugin/build.gradle
@@ -21,15 +21,17 @@ task wrapper(type: Wrapper) {
     gradleVersion = '1.10'
 }
 
-task javadocJar(type: Jar, dependsOn: javadoc) {
+task javadocJar(type: Jar, dependsOn: groovydoc) {
     classifier = 'javadoc'
-    from 'build/docs/javadoc'
+    from 'build/docs/groovydoc'
 }
 
 task sourcesJar(type: Jar) {
     from sourceSets.main.allSource
     classifier = 'sources'
 }
+
+
 
 artifacts {
     archives jar
