--- a/gradle-typescript-plugin/build.gradle
+++ b/gradle-typescript-plugin/build.gradle
@@ -15,7 +15,7 @@ repositories {
 }
 
 group = "org.typescriptlang.gradle"
-version = "0.1-SNAPSHOT"
+version = "0.1"
 
 task wrapper(type: Wrapper) {
     gradleVersion = '1.10'
