--- a/gradle-typescript-plugin/build.gradle
+++ b/gradle-typescript-plugin/build.gradle
@@ -14,7 +14,7 @@ repositories {
     mavenCentral()
 }
 
-group = "org.typescriptlang.gradle"
+group = "at.irian.typescript"
 version = "0.2-SNAPSHOT"
 
 task wrapper(type: Wrapper) {
