set correct gradle wrapper version for sample project

--- a/sample-typescript-project/build.gradle
+++ b/sample-typescript-project/build.gradle
@@ -28,3 +28,6 @@ task("build") {
     dependsOn "compileTypeScript", "copyJs", "copyHtml"
 }
 
+task wrapper(type: Wrapper) {
+    gradleVersion = '1.10'
+}
