new combine js task

--- a/sample-typescript-project/build.gradle
+++ b/sample-typescript-project/build.gradle
@@ -11,6 +11,9 @@ buildscript {
     }
 }
 
+typescript {
+    combineJsModules = ["calculator"]
+}
 
 task("copyJs", type: Copy) {
     from "src/main/typescript"
