--- a/gradle-typescript-plugin/src/main/resources/test-resources/template/console-test.html.template
+++ b/gradle-typescript-plugin/src/main/resources/test-resources/template/console-test.html.template
@@ -9,7 +9,7 @@
     <script src="<% print(testJsLibs) %>/jasmine.terminal_reporter.js"></script>
     <script src="<% print(testJsLibs) %>/es5-shim.js"></script>
     <script type="text/javascript" src="<% print(requireJsConfigFile) %>"></script>
-    <script src="<% print(testJsLibs) %>/require-2.1.8.js" type="text/javascript" charset="utf-8"></script>
+    <script src="<% print(testJsLibs) %>/require-2.1.11-patched.js" type="text/javascript" charset="utf-8"></script>
 </head>
 <body>
 <script type="text/javascript">
