--- a/gradle-typescript-plugin/build.gradle
+++ b/gradle-typescript-plugin/build.gradle
@@ -13,7 +13,7 @@ repositories {
 }
 
 group = "at.irian.typescript"
-version = "0.4"
+version = "0.4-SNAPSHOT"
 
 task wrapper(type: Wrapper) {
     gradleVersion = '1.10'
