--- a/gradle-typescript-plugin/build.gradle
+++ b/gradle-typescript-plugin/build.gradle
@@ -6,6 +6,9 @@ dependencies {
     compile gradleApi()
     compile localGroovy()
     compile 'org.apache.ant:ant:1.9.2'
+    compile 'com.google.guava:guava:17.0'
+    testCompile group: 'junit', name: 'junit', version: '4.11'
+    testCompile "org.mockito:mockito-all:1.9.5"
 }
 
 repositories {
@@ -13,7 +16,7 @@ repositories {
 }
 
 group = "at.irian.typescript"
-version = "0.6"
+version = "0.7-SNAPSHOT"
 
 task wrapper(type: Wrapper) {
     gradleVersion = '1.10'
@@ -28,6 +31,8 @@ task sourcesJar(type: Jar) {
     from sourceSets.main.allSource
     classifier = 'sources'
 }
+
+tasks.jar.dependsOn test
 
 artifacts {
     archives jar
