--- a/gradle-typescript-plugin/build.gradle
+++ b/gradle-typescript-plugin/build.gradle
@@ -16,7 +16,7 @@ repositories {
 }
 
 group = "at.irian.typescript"
-version = "0.7"
+version = "0.8-SNAPSHOT"
 
 task wrapper(type: Wrapper) {
     gradleVersion = '1.10'
