--- a/gradle-typescript-plugin/src/main/resources/test-resources/template/browser-test.html.template
+++ b/gradle-typescript-plugin/src/main/resources/test-resources/template/browser-test.html.template
@@ -35,7 +35,7 @@
         %>
           testDeps.forEach(function(dep) {
             var depKey = "typescript-test-file-" + dep;
-            requireConfig.paths[depKey] = "file://<% print(testSourcesPath) %>/" + dep;
+            requireConfig.paths[depKey] = "<% print(testSourcesUri) %>/" + dep;
             deps.push(depKey)
           });
 
