--- a/gradle-typescript-plugin/src/main/resources/test-resources/template/console-test.html.template
+++ b/gradle-typescript-plugin/src/main/resources/test-resources/template/console-test.html.template
@@ -32,7 +32,7 @@
     %>
       testDeps.forEach(function(dep) {
         var depKey = "typescript-test-file-" + dep;
-        requireConfig.paths[depKey] = "file://<% print(testSourcesPath) %>/" + dep;
+        requireConfig.paths[depKey] = "<% print(testSourcesUri) %>/" + dep;
         deps.push(depKey)
       });
 
