--- a/sample-typescript-project/build.gradle
+++ b/sample-typescript-project/build.gradle
@@ -7,7 +7,7 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath group: 'at.irian.typescript', name: 'gradle-typescript-plugin', version: '0.7'
+        classpath group: 'at.irian.typescript', name: 'gradle-typescript-plugin', version: '0.8-SNAPSHOT'
     }
 }
 
