--- a/gradle-typescript-plugin/src/main/resources/test-resources/template/browser-test.html.template
+++ b/gradle-typescript-plugin/src/main/resources/test-resources/template/browser-test.html.template
@@ -34,10 +34,8 @@
             }
         %>
           testDeps.forEach(function(dep) {
-            var depKey = "typescript-test-file-" + dep;
-            requireConfig.paths[depKey] = "<% print(testSourcesUri) %>/" + dep;
-            deps.push(depKey)
-          });
+              deps.push("<% print(testSourcesRelativeToMainSources) %>" + dep);
+            });
 
         require.config(requireConfig);
 
