--- a/gradle-typescript-plugin/src/main/resources/test-resources/template/console-test.html.template
+++ b/gradle-typescript-plugin/src/main/resources/test-resources/template/console-test.html.template
@@ -31,9 +31,7 @@
         }
     %>
       testDeps.forEach(function(dep) {
-        var depKey = "typescript-test-file-" + dep;
-        requireConfig.paths[depKey] = "<% print(testSourcesUri) %>/" + dep;
-        deps.push(depKey)
+        deps.push("<% print(testSourcesRelativeToMainSources) %>" + dep);
       });
 
     require.config(requireConfig);
