--- a/gradle-typescript-plugin/build.gradle
+++ b/gradle-typescript-plugin/build.gradle
@@ -16,7 +16,12 @@ repositories {
 }
 
 group = "at.irian.typescript"
-version = "0.9"
+version = "0.10-SNAPSHOT"
+
+
+sourceCompatibility = 1.6
+targetCompatibility = 1.6
+
 
 task wrapper(type: Wrapper) {
     gradleVersion = '1.10'
