--- a/gradle-typescript-plugin/build.gradle
+++ b/gradle-typescript-plugin/build.gradle
@@ -7,6 +7,7 @@ dependencies {
     compile localGroovy()
     compile 'org.apache.ant:ant:1.9.2'
     compile 'com.google.guava:guava:17.0'
+    compile 'commons-io:commons-io:1.4'
     testCompile group: 'junit', name: 'junit', version: '4.11'
     testCompile "org.mockito:mockito-all:1.9.5"
 }
