made requireConfig global variable name configurable

--- a/gradle-typescript-plugin/src/main/resources/test-resources/template/console-test.html.template
+++ b/gradle-typescript-plugin/src/main/resources/test-resources/template/console-test.html.template
@@ -14,7 +14,7 @@
 <body>
 <script type="text/javascript">
 
-    requireConfig = requireConfig || {
+    requireConfig = <% print(requireJsGlobalVarName%> || {
         baseUrl: ".",
         paths: {}
     };
