--- a/gradle-typescript-plugin/src/main/resources/test-resources/template/browser-test.html.template
+++ b/gradle-typescript-plugin/src/main/resources/test-resources/template/browser-test.html.template
@@ -14,7 +14,7 @@
 
     <script>
 
-        requireConfig = requireConfig || {
+        requireConfig = <% print(requireJsGlobalVarName%> || {
             baseUrl: ".",
             paths: {}
         };
